<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.eclipse.jetty.tck</groupId>
  <artifactId>servlet-tck-run</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <name>tck-build</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.sources>11</maven.compiler.sources>
    <maven.compiler.release>11</maven.compiler.release>
    <junit.version>5.9.1</junit.version>
    <slf4j.version>2.0.2</slf4j.version>
    <arquillian.core.version>1.7.0.Alpha13</arquillian.core.version> <!-- 1.7.0.Final-SNAPSHOT -->
    <jetty.version>11.0.12</jetty.version> <!-- 11.0.9-SNAPSHOT -->
    <surefire.version>3.0.0-M7</surefire.version> <!-- 3.0.0-M7-SNAPSHOT -->
    <jakarta.tck.version>10.0.0-SNAPSHOT</jakarta.tck.version>
    <fork.argLine>-Xmx8g -Xms4g</fork.argLine>
    <http2.timeout></http2.timeout>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-bom</artifactId>
        <version>${jetty.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>jakartatck</groupId>
      <artifactId>servlet</artifactId>
      <version>${jakarta.tck.version}</version>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>*</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.glassfish.metro</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.jboss.arquillian.container</groupId>
      <artifactId>arquillian-jetty-embedded-11</artifactId>
      <version>1.0.0.Final</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-deploy</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty.http2</groupId>
      <artifactId>http2-server</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-annotations</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>apache-jsp</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>glassfish-jstl</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- needed for intellij -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>jakartatck</groupId>
      <artifactId>libutil</artifactId>
      <version>${jakarta.tck.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.glassfish.metro</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jul-to-slf4j</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jboss.arquillian.container</groupId>
      <artifactId>arquillian-container-test-spi</artifactId>
      <version>${arquillian.core.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jboss.arquillian.junit5</groupId>
      <artifactId>arquillian-junit5-container</artifactId>
      <version>${arquillian.core.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- just make Intellij/jpms happy when having all the projects together -->
<!--    <dependency>-->
<!--      <groupId>org.eclipse.jetty</groupId>-->
<!--      <artifactId>jetty-slf4j-impl</artifactId>-->
<!--      <version>${jetty.version}</version>-->
<!--      <scope>compile</scope>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.eclipse.jetty</groupId>-->
<!--      <artifactId>jetty-jmx</artifactId>-->
<!--      <scope>compile</scope>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.eclipse.jetty</groupId>-->
<!--      <artifactId>jetty-util-ajax</artifactId>-->
<!--      <scope>compile</scope>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.eclipse.jetty</groupId>-->
<!--      <artifactId>jetty-client</artifactId>-->
<!--      <scope>compile</scope>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.eclipse.jetty</groupId>-->
<!--      <artifactId>jetty-webapp</artifactId>-->
<!--      <scope>compile</scope>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.eclipse.jetty</groupId>-->
<!--      <artifactId>jetty-xml</artifactId>-->
<!--      <scope>compile</scope>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.eclipse.jetty</groupId>-->
<!--      <artifactId>jetty-util</artifactId>-->
<!--      <scope>compile</scope>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.eclipse.jetty.tests</groupId>-->
<!--      <artifactId>jetty-http-tools</artifactId>-->
<!--      <version>${jetty.version}</version>-->
<!--      <scope>compile</scope>-->
<!--    </dependency>-->
  </dependencies>

  <build>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.10.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire.version}</version>
          <dependencies>
<!--            <dependency>-->
<!--              <groupId>org.junit.jupiter</groupId>-->
<!--              <artifactId>junit-jupiter-engine</artifactId>-->
<!--              <version>${junit.version}</version>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--              <groupId>org.apache.maven.surefire</groupId>-->
<!--              <artifactId>surefire-junit-platform</artifactId>-->
<!--              <version>${surefire.version}</version>-->
<!--            </dependency>-->
            <dependency>
              <groupId>org.junit.platform</groupId>
              <artifactId>junit-platform-launcher</artifactId>
              <version>1.9.1</version>
            </dependency>
            <dependency>
              <groupId>jakartatck</groupId>
              <artifactId>junit5-extensions</artifactId>
              <version>${jakarta.tck.version}</version>
            </dependency>
          </dependencies>
          <configuration>
            <!-- this need some times to run -->
            <argLine>${fork.argLine} -Duser.language=en -Duser.country=US -Djava.locale.providers=COMPAT,CLDR
              -Djava.protocol.handler.pkgs=javax.net.ssl
              -Djavax.net.ssl.keyStore=${project.build.testOutputDirectory}/certificates/clientcert.jks
              -Djavax.net.ssl.keyStorePassword=changeit
              -Djavax.net.ssl.trustStore=${project.build.directory}/cacerts.jks</argLine>
            <forkedProcessTimeoutInSeconds>15000</forkedProcessTimeoutInSeconds>
            <includeJUnit5Engines>
              <includeJUnit5Engine>jakarta-tck-test-engine</includeJUnit5Engine>
            </includeJUnit5Engines>
            <excludeJUnit5Engines>
              <excludeJUnit5Engine>junit-vintage</excludeJUnit5Engine>
              <excludeJUnit5Engine>junit-jupiter</excludeJUnit5Engine>
            </excludeJUnit5Engines>
            <dependenciesToScan>
              <dependenciesToScan>jakartatck:servlet</dependenciesToScan>
            </dependenciesToScan>
            <systemProperties>
              <http2.timeout>${http2.timeout}</http2.timeout>
            </systemProperties>
            <includes>
<!--              <include>**/URLClient*</include>-->
<!--              <include>**/Client*</include>-->
<!--              <include>**/jakarta_servlet/scinitializer/addfilter1/URLClient*</include>-->
            </includes>
            <trimStackTrace>false</trimStackTrace>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.basepom.maven</groupId>
          <artifactId>duplicate-finder-maven-plugin</artifactId>
          <version>1.5.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
<!--    <plugins>-->
<!--      <plugin>-->
<!--        <groupId>de.sormuras.junit</groupId>-->
<!--        <artifactId>junit-platform-maven-plugin</artifactId>-->
<!--        <version>1.1.6</version>-->
<!--        <extensions>true</extensions>-->
<!--        <configuration>-->
<!--&lt;!&ndash;          <executor>JAVA</executor>&ndash;&gt;-->
<!--          <isolation>NONE</isolation>-->
<!--        </configuration>-->
<!--        <dependencies>-->
<!--          <dependency>-->
<!--            <groupId>jakartatck</groupId>-->
<!--            <artifactId>junit5-extensions</artifactId>-->
<!--            <version>${jakarta.tck.version}</version>-->
<!--          </dependency>-->
<!--          <dependency>-->
<!--            <groupId>jakartatck</groupId>-->
<!--            <artifactId>servlet</artifactId>-->
<!--            <version>${jakarta.tck.version}</version>-->
<!--          </dependency>-->
<!--        </dependencies>-->
<!--      </plugin>-->
<!--    </plugins>-->
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>unpack</id>
            <phase>generate-test-resources</phase>
            <goals>
              <goal>unpack</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>jakartatck</groupId>
                  <artifactId>libutil</artifactId>
                  <type>jar</type>
                  <overWrite>false</overWrite>
                  <outputDirectory>${project.build.testOutputDirectory}/</outputDirectory>
                  <includes>**/**cts_cert,**/**clientcert.jks,**/**clientcert.p12</includes>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>keytool-maven-plugin</artifactId>
        <version>1.6</version>
        <executions>
          <execution>
            <goals>
              <goal>importCertificate</goal>
            </goals>
            <phase>process-test-resources</phase>
          </execution>
        </executions>
        <configuration>
          <!-- "$JAVA_HOME/bin/keytool -import -noprompt -alias cts -dname \"CN=CTS, OU=Java Software, O=Sun Microsystems Inc., L=Burlington, ST=MA, C=US\"
          -file servlet-tck/bin/certificates/cts_cert -storetype JKS  -keystore cacerts.jks -storepass changeit -keypass changeit" -->
          <noprompt>true</noprompt>
          <alias>cts</alias>
          <dname>CN=CTS, OU=Java Software, O=Sun Microsystems Inc., L=Burlington, ST=MA, C=US</dname>
          <file>${project.build.testOutputDirectory}/certificates/cts_cert</file>
          <storetype>JKS</storetype>
          <keystore>${project.build.directory}/cacerts.jks</keystore>
          <storepass>changeit</storepass>
          <keypass>changeit</keypass>
          <skipIfExist>true</skipIfExist>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <pluginRepositories>
    <pluginRepository>
      <id>apache.snapshots</id>
      <url>https://repository.apache.org/content/groups/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>
  <repositories>
    <repository>
      <id>apache.snapshots</id>
      <url>https://repository.apache.org/content/groups/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>jetty.snapshots</id>
      <url>https://oss.sonatype.org/content/repositories/jetty-snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>jetty.staging</id>
      <url>https://oss.sonatype.org/content/groups/jetty-with-staging</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
</project>
